        site admin to configure a site so that the ``logout()`` function is
        supported.  (The default authentication scheme, HTTP basic auth, does
        not support logout.) See ``zope/app/security/browser/loginlogout.txt``
        for details.

      - Changed directory resources to support recursion into subdirectories.

    Bug Fixes

      - Fix #421: TextArea widgets didn't handle missing values
        correctly.

      - Fix #384: Handling utility permissions

        When defining utilities in ZCML with permissions, checker
        objects were saved on the utilty's __Security_checker__
        attribute. This caused problems if the component was
        registered more than once, or if the component was a class.
        Now a proxy is used to hold the security checker, so that the 
        checker is specific to a particular registration.

      - Fix  307: browser:addMenuItem and broken view references

      - Fix #411: Remove SendmailMailer

      - Fix #302: File objects can contain non-ASCII characters and be editable
        through the web.

      - Container proxy instances had __dict__ attributes that hid
        the __dict__ attributes of proxied objects.

      - Fix #284: Bogus 404 errors with TALES traversal fails

      - Fix #298: Role/permission title and description should be messageids

      - Fix #332 : Death to IContentContainer

      - Fix #356 : Copy and Paste does not handle exceptions raised by
        ``__setitem__``

      - Made different key reference implementations comparable:
        ``IKeyReference`` interface is extended by an additional
        ``key_type_id`` attribute.

      - Fixed issue #400: i18n image broken in trunk

      - Fix #392 : adapter registry subscribers method can return None
        when it shouldn't

      - Fix 'Wiki permissions and PAU' bug reported by Paolo Invernizzi

      - Assert location if a non-public permission was specified within an